charts/nxtcloud/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: nextcloud
subsets:
- addresses:
  - ip: 192.168.1.216
  ports:
  - name: nextcloud
    port: 8283
