charts/nxtcloud/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  ports:
    - port: 8283
      protocol: TCP
      targetPort: 8283
      name: nextcloud
